Ambient light change

--- a/reto/Simulation/index.html
+++ b/reto/Simulation/index.html
@@ -84,7 +84,7 @@
         const scenary = new Scenary();
 
         // Ambient Light
-        const ambientLight = new THREE.AmbientLight(0x26ff26, 0.5);
+        const ambientLight = new THREE.AmbientLight(0x404040, 1);
         scene.add(ambientLight);
 
         //Multiview camera
