--- a/reto/Simulation/index.html
+++ b/reto/Simulation/index.html
@@ -27,7 +27,9 @@
       import Stats from "https://cdn.skypack.dev/three@0.134.0/examples/jsm/libs/stats.module";
       import { OBJLoader } from "https://cdn.skypack.dev/three@0.134.0/examples/jsm/loaders/OBJLoader.js";
       import { GLTFLoader } from "https://cdn.skypack.dev/three@0.134.0/examples/jsm/loaders/GLTFLoader.js";
+      import { RGBELoader } from "https://cdn.skypack.dev/three@0.134.0/examples/jsm/loaders/RGBELoader.js";
       import { EXRLoader } from "https://cdn.skypack.dev/three@0.134.0/examples/jsm/loaders/EXRLoader.js";
+
 
       const objLoader = new OBJLoader();
       const gltfLoader = new GLTFLoader();
@@ -76,6 +78,9 @@
         renderer.setClearColor(new THREE.Color(0, 0, 0));
         renderer.setPixelRatio(window.devicePixelRatio);
         renderer.setScissorTest(true);
+        renderer.physicallyCorrectLights = true;
+        renderer.outputEncoding = THREE.sRGBEncoding;
+
         document.body.appendChild(renderer.domElement);
 
         scene = new THREE.Scene();
@@ -84,8 +89,20 @@
         const scenary = new Scenary();
 
         // Ambient Light
-        const ambientLight = new THREE.AmbientLight(0x404040, 1);
+        const ambientLight = new THREE.AmbientLight(0xFFFFFF, 0.3);
+
+        const light2  = new THREE.DirectionalLight(0xFFFFFF, 0.8 * Math.PI);
+        light2.position.set(0.5, 0, 0.866); // ~60º
+        light2.name = 'main_light';
+
+        const hemiLight = new THREE.HemisphereLight();
+        hemiLight.name = 'hemi_light';
+        scene.add(hemiLight);
+
+        scene.add(light2);
         scene.add(ambientLight);
+        renderer.toneMappingExposure = 3;
+
 
         //Multiview camera
 
@@ -198,6 +215,7 @@
         }, 1000 / 24);
 
         renderer.render(scene, camera); // DRAW THE SCENE GRAPH
+
         //updateScene();
         stats.end();
         requestAnimationFrame(renderLoop);
